# gd32-pac

gd32f1x0-pac/: Cargo.toml  build.rs
gd32f1x0-pac/src/: lib.rs
gd32f1x0-pac/src/gd32f130/: adc.rs  can0.rs  cec.rs  cmp.rs  crc.rs  dac.rs  dma.rs  exti.rs  fmc.rs  fwdgt.rs  gpioa.rs  gpiod.rs  i2c0.rs  mod.rs  opa_ivref.rs  rcu.rs  rtc.rs  slcd.rs  spi0.rs  syscfg.rs  timer0.rs  timer1.rs  timer13.rs  timer14.rs  timer15.rs  timer5.rs  tsi.rs  usart0.rs  usbd.rs  wwdgt.rs
gd32f1x0-pac/src/gd32f130/adc/: ctl0.rs  ctl1.rs  idata0.rs  idata1.rs  idata2.rs  idata3.rs  ioff0.rs  ioff1.rs  ioff2.rs  ioff3.rs  isq.rs  ovsampctl.rs  rdata.rs  rsq0.rs  rsq1.rs  rsq2.rs  sampt0.rs  sampt1.rs  wdht.rs
gd32f1x0-pac/src/gd32f130/can0/: bt.rs  ctl.rs  err.rs  f0data0.rs  f0data1.rs  f10data0.rs  f10data1.rs  f11data0.rs  f11data1.rs  f12data0.rs  f12data1.rs  f13data0.rs  f13data1.rs  f14data0.rs  f14data1.rs  f15data0.rs  f15data1.rs  f16data0.rs  f16data1.rs  f17data0.rs  f17data1.rs  f18data0.rs  f18data1.rs  f19data0.rs  f19data1.rs  f1data0.rs  f1data1.rs  f20data0.rs  f20data1.rs  f21data0.rs  f21data1.rs  f22data0.rs  f22data1.rs  f23data0.rs  f23data1.rs  f24data0.rs  f24data1.rs  f25data0.rs  f25data1.rs  f26data0.rs  (+50 more)
gd32f1x0-pac/src/gd32f130/cec/: cfg.rs  ctl.rs  inten.rs  intf.rs  rdata.rs  tdata.rs
gd32f1x0-pac/src/gd32f130/cmp/: cs.rs
gd32f1x0-pac/src/gd32f130/crc/: ctl.rs  data.rs  fdata.rs  idata.rs
gd32f1x0-pac/src/gd32f130/dac/: ctl.rs  dac0_do.rs  dac0_l12dh.rs  dac0_r12dh.rs  dac0_r8dh.rs  dac1_do.rs  dac1_l12dh.rs  (+7 more)
gd32f1x0-pac/svd/: GD32F1x0.svd
(+754 files in other folders)
