[package]
name = "gd32f1x0-pac"
version = "0.1.0"
edition = "2018"
authors = ["featherfly <featherfly@foxmail.com>"]
description = "Device support crates for GD32E23X devices"
readme = "README.md"
keywords = ["gd32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
# repository = "https://github.com/gd32-rs/gd32-rs"

[package.metadata.docs.rs]
features = ["rt", "gd32f130", "gd32f150", "gd32f170", "gd32f190"]

[dependencies]
# bare-metal = "1.0.0"
bare-metal = "0.2.5"
cortex-m = "0.6.4"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]
gd32f130 = []
gd32f150 = []
gd32f170 = []
gd32f190 = []